--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciador de Empréstimos - Login</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Russo Empréstimos - Login</title> <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="login-container">
-        <h1 class="app-title">RUSSO EMPRÉSTIMOS</h1>
+    <main class="login-container"> <h1 class="app-title">RUSSO EMPRÉSTIMOS</h1>
         <form id="loginForm">
             <div class="input-group">
                 <label for="username">Usuário:</label>
@@ -18,11 +16,9 @@
                 <label for="password">Senha:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit">Entrar</button>
-            <p id="errorMessage" class="error-message"></p>
+            <p id="errorMessage" class="error-message"></p> <button type="submit">Entrar</button>
         </form>
-    </div>
+    </main>
 
-    <script src="script.js"></script>
-</body>
+    <script src="script.js" defer></script> </body>
 </html>
