--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Russo Empréstimos - Login</title> <link rel="stylesheet" href="style.css">
+    <title>Russo Empréstimos - Login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="login-container"> <h1 class="app-title">RUSSO EMPRÉSTIMOS</h1>
+    <main class="login-container">
+        <h1 class="app-title">RUSSO EMPRÉSTIMOS</h1>
         <form id="loginForm">
             <div class="input-group">
                 <label for="username">Usuário:</label>
@@ -16,9 +18,11 @@
                 <label for="password">Senha:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <p id="errorMessage" class="error-message"></p> <button type="submit">Entrar</button>
+            <p id="errorMessage" class="error-message"></p>
+            <button type="submit">Entrar</button>
         </form>
     </main>
 
-    <script src="script.js" defer></script> </body>
+    <script src="script.js" defer></script>
+</body>
 </html>
