--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         </form>
     </main>
 
-    <script src="script.js" defer></script>
+    <script src="login.js" defer></script>
 </body>
 </html>
