--- a/dashboard.html
+++ b/dashboard.html
@@ -73,7 +73,7 @@
                 <label for="startDate">Data de Início:</label>
                 <input type="date" id="startDate" required>
 
-                <button type="submit" id="saveDebtorButton">Salvar Devedor</button>
+                <button id="saveDebtorButton">Salvar Devedor</button>
             </form>
         </div>
     </div>
