--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Russo Empréstimos - Login</title>
+    <title>Gerenciador de Empréstimos - Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="login-container">
+    <div class="login-container">
         <h1 class="app-title">RUSSO EMPRÉSTIMOS</h1>
         <form id="loginForm">
             <div class="input-group">
@@ -18,11 +18,11 @@
                 <label for="password">Senha:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <p id="errorMessage" class="error-message"></p>
             <button type="submit">Entrar</button>
+            <p id="errorMessage" class="error-message"></p>
         </form>
-    </main>
+    </div>
 
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
