--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,6 @@
 
     <main class="dashboard-container">
         <h2>Meus Devedores</h2>
-        <div id="errorMessage" class="error-message" style="display: none;"></div>
         <div id="debtorsList" class="debtors-list">
             </div>
         <button id="addDebtorButton" class="add-button">Adicionar Novo Devedor</button>
@@ -24,13 +23,10 @@
         <div class="modal-content">
             <span class="close-button">&times;</span>
             <h2 id="detailDebtorName"></h2>
-            <p>Valor Emprestado: <span id="detailTotalAmount"></span></p>
-            <p>Parcelas Calculadas: <span id="detailInstallments"></span></p>
-            <p>Valor por Parcela (Calculado): <span id="detailAmountPerInstallment"></span></p>
+            <p>Valor Total: <span id="detailTotalAmount"></span></p>
+            <p>Parcelas: <span id="detailInstallments"></span></p>
+            <p>Valor por Parcela: <span id="detailAmountPerInstallment"></span></p>
             <p>Data de Início: <span id="detailStartDate"></span></p>
-            
-            <p>Valor da Parcela Definida: <span id="detailCustomInstallmentAmount"></span></p>
-            <p>Lucro Total Estimado: <span id="detailEstimatedProfit"></span></p>
 
             <h3>Pagamentos</h3>
             <div id="paymentsGrid" class="payments-grid">
@@ -56,20 +52,17 @@
                 <label for="debtorName">Nome:</label>
                 <input type="text" id="debtorName" required>
 
-                <label for="totalAmount">Valor Total Emprestado:</label>
+                <label for="totalAmount">Valor Total:</label>
                 <input type="number" id="totalAmount" step="0.01" required>
 
                 <label for="installments">Número de Parcelas:</label>
                 <input type="number" id="installments" required>
-                
-                <label for="customInstallmentAmount">Valor da Parcela (opcional, ex: 125.00 para 24x125):</label>
-                <input type="number" id="customInstallmentAmount" step="0.01">
 
                 <label for="startDate">Data de Início:</label>
                 <input type="date" id="startDate" required>
 
                 <button type="submit" id="saveDebtorButton">Salvar Devedor</button>
-            </form>
+                </form>
         </div>
     </div>
 
