--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,9 @@
 
     <main class="dashboard-container">
         <h2>Meus Devedores</h2>
+
+        <div id="errorMessage" class="error-message" style="display:none;"></div>
+
         <div id="debtorsList" class="debtors-list">
             </div>
         <button id="addDebtorButton" class="add-button">Adicionar Novo Devedor</button>
@@ -62,7 +65,7 @@
                 <input type="date" id="startDate" required>
 
                 <button type="submit" id="saveDebtorButton">Salvar Devedor</button>
-                </form>
+            </form>
         </div>
     </div>
 
