--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,7 @@
 
     <main>
         <section class="debtor-controls">
-            <button id="addDebtorButton" style="margin-right: 50px;">Adicionar Novo Devedor</button>
+            <button id="addDebtorButton">Adicionar Novo Devedor</button>
         </section>
 
         <section class="debtors-list-section">
