--- a/dashboard.html
+++ b/dashboard.html
@@ -7,25 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>Dashboard</h1>
         <nav>
-            <button id="logoutButton">Sair</button>
-        </nav>
+            </nav>
     </header>
 
-    <main>
-        <section class="debtor-controls">
-            <button id="addDebtorButton">Adicionar Novo Devedor</button>
-        </section>
+    <section class="debtor-controls">
+        <button id="addDebtorButton" class="add-button">Adicionar Novo Devedor</button>
+    </section>
 
+    <div class="dashboard-container">
         <section class="debtors-list-section">
             <h2>Meus Devedores</h2>
             <div id="errorMessage" class="error-message" style="display: none;"></div>
-            <div id="debtorsList" class="debtors-grid">
+            <div id="debtorsList" class="debtors-list">
                 </div>
         </section>
-    </main>
+    </div>
+
+    <div class="logout-container">
+        <button id="logoutButton" class="logout-button">Sair</button>
+    </div>
 
     <div id="debtorDetailModal" class="modal">
         <div class="modal-content">
@@ -46,12 +49,12 @@
                 <div class="payments-grid" id="paymentsGrid">
                     </div>
 
-                <div class="add-payment-section">
+                <div class="payment-input">
                     <h4>Adicionar Pagamento</h4>
                     <div class="input-group">
                         <label for="paymentAmount">Valor:</label>
                         <input type="number" id="paymentAmount" step="0.01" required>
-                        <button id="fillAmountButton" class="fill-amount-btn">Preencher Valor Parcela</button>
+                        <button id="fillAmountButton" class="small-button">Preencher Valor Parcela</button>
                     </div>
                     <div class="input-group">
                         <label for="paymentDate">Data:</label>
