--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,10 @@
     <header class="header">
         <h1>Dashboard</h1>
         <nav>
-            </nav>
+            <button id="themeToggleButton" class="theme-toggle-button">
+                Alternar Tema
+            </button>
+        </nav>
     </header>
 
     <section class="debtor-controls">
