--- a/dashboard.html
+++ b/dashboard.html
@@ -25,7 +25,8 @@
             <h2>Meus Devedores</h2>
             <div id="errorMessage" class="error-message" style="display: none;"></div>
             <div id="debtorsList" class="debtors-list">
-                </div>
+                <p class="loading-message">Carregando devedores...</p>
+            </div>
         </section>
     </div>
 
@@ -103,6 +104,8 @@
         </div>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
