--- a/index.html
+++ b/index.html
@@ -5,45 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de Empréstimos - Login</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
 </head>
 <body>
-    <div class="login-container">
-        <h1>Bem-vindo ao Gerenciador de Empréstimos</h1>
-
-        <div class="form-card">
+    <div class="container">
+        <div class="auth-section login-section active">
             <h2>Login</h2>
             <form id="loginForm">
                 <div class="input-group">
-                    <label for="loginEmail">Email:</label>
+                    <label for="loginEmail">E-mail:</label>
                     <input type="email" id="loginEmail" required>
                 </div>
                 <div class="input-group">
                     <label for="loginPassword">Senha:</label>
                     <input type="password" id="loginPassword" required>
                 </div>
-                <button type="submit">Entrar</button>
+                <button type="submit" class="button">Entrar</button>
+                <p id="loginError" class="error-message"></p>
             </form>
         </div>
-
-        <div class="form-card" style="margin-top: 20px;">
-            <h2>Registro</h2>
-            <form id="registerForm">
-                <div class="input-group">
-                    <label for="registerEmail">Email:</label>
-                    <input type="email" id="registerEmail" required>
-                </div>
-                <div class="input-group">
-                    <label for="registerPassword">Senha:</label>
-                    <input type="password" id="registerPassword" required>
-                </div>
-                <button type="submit">Registrar</button>
-            </form>
         </div>
-    </div>
 
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
