--- a/dashboard.html
+++ b/dashboard.html
@@ -5,69 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de Empréstimos - Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
 </head>
 <body>
-    <header class="header">
-        <h1>Dashboard</h1>
-        <nav>
-            <button id="themeToggleButton" class="theme-toggle-button">
-                Alternar Tema
-            </button>
-        </nav>
-    </header>
-
-    <section class="debtor-controls">
-        <button id="addDebtorButton" class="add-button">Adicionar Novo Devedor</button>
-    </section>
-
     <div class="dashboard-container">
-        <section class="debtors-list-section">
-            <h2>Meus Devedores</h2>
-            <div id="errorMessage" class="error-message" style="display: none;"></div>
+        <header class="header">
+            <h1>Meus Devedores</h1>
+            <div class="header-actions">
+                <button id="addDebtorButton" class="button">Adicionar Novo Devedor</button>
+                <button id="themeToggleButton" class="theme-toggle-button">Alternar Tema</button>
+                <button id="logoutButton" class="button">Sair</button>
+            </div>
+        </header>
+
+        <p id="errorMessage" class="error-message" style="display: none;"></p>
+
+        <div class="dashboard-content">
             <div id="debtorsList" class="debtors-list">
                 <p class="loading-message">Carregando devedores...</p>
-            </div>
-        </section>
-    </div>
-
-    <div class="logout-container">
-        <button id="logoutButton" class="logout-button">Sair</button>
-    </div>
-
-    <div id="debtorDetailModal" class="modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2 id="detailDebtorName"></h2>
-                <p id="detailDebtorDescription" style="font-style: italic; color: var(--light-text); margin-top: 5px;"></p>
-                <span class="close-button">&times;</span>
-            </div>
-            <div class="modal-body">
-                <div class="debtor-details-info">
-                    <p><strong>Valor Emprestado:</strong> <span id="detailLoanedAmount"></span></p>
-                    <p><strong>Valor Total a Receber:</strong> <span id="detailTotalToReceive"></span> <label><input type="checkbox" id="toggleTotalToReceive"> Ocultar</label></p>
-                    <p><strong>Juros (%):</strong> <span id="detailInterestPercentage"></span></p>
-                    <p><strong>Valor por Parcela:</strong> <span id="detailAmountPerInstallment"></span></p>
-                    <p><strong>Parcelas:</strong> <span id="detailInstallments"></span></p>
-                    <p><strong>Data de Início:</strong> <span id="detailStartDate"></span></p>
-                </div>
-
-                <h3>Pagamentos</h3>
-                <div class="payments-grid" id="paymentsGrid">
-                    </div>
-
-                <div class="payment-input">
-                    <h4>Adicionar Pagamento</h4>
-                    <div class="input-group">
-                        <label for="paymentAmount">Valor:</label>
-                        <input type="number" id="paymentAmount" step="0.01" required>
-                        <button id="fillAmountButton" class="small-button">Preencher Valor Parcela</button>
-                    </div>
-                    <div class="input-group">
-                        <label for="paymentDate">Data:</label>
-                        <input type="date" id="paymentDate" required>
-                    </div>
-                    <button id="addPaymentButton">Adicionar Pagamento</button>
-                </div>
             </div>
         </div>
     </div>
@@ -75,38 +32,87 @@
     <div id="addEditDebtorModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 id="addEditModalTitle"></h2>
+                <h2 id="addEditModalTitle">Adicionar Novo Devedor</h2>
                 <span class="close-button">&times;</span>
             </div>
             <div class="modal-body">
                 <form id="addEditDebtorForm">
-                    <label for="debtorName">Nome do Devedor:</label>
-                    <input type="text" id="debtorName" required>
-
-                    <label for="debtorDescription">Descrição (opcional):</label>
-                    <input type="text" id="debtorDescription" placeholder="Ex: João da Padaria, Endereço, etc.">
-
-                    <label for="loanedAmount">Valor Emprestado:</label>
-                    <input type="number" id="loanedAmount" step="0.01" required>
-
-                    <label for="amountPerInstallmentInput">Valor por Parcela:</label>
-                    <input type="number" id="amountPerInstallmentInput" step="0.01" required>
-                    
-                    <label for="installments">Número de Parcelas:</label>
-                    <input type="number" id="installments" required>
-
-                    <label for="startDate">Data de Início:</label>
-                    <input type="date" id="startDate" required>
-
-                    <button type="submit" id="saveDebtorButton">Salvar Devedor</button>
+                    <div class="input-group">
+                        <label for="debtorName">Nome:</label>
+                        <input type="text" id="debtorName" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="debtorDescription">Descrição:</label>
+                        <input type="text" id="debtorDescription">
+                    </div>
+                    <div class="input-group">
+                        <label for="loanedAmount">Valor Emprestado:</label>
+                        <input type="number" id="loanedAmount" step="0.01" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="amountPerInstallmentInput">Valor por Parcela:</label>
+                        <input type="number" id="amountPerInstallmentInput" step="0.01" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="installments">Número de Parcelas:</label>
+                        <input type="number" id="installments" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="startDate">Data de Início:</label>
+                        <input type="date" id="startDate" required>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" id="saveDebtorButton" class="button">Salvar</button>
+                    </div>
                 </form>
             </div>
         </div>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
+    <div id="debtorDetailModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="detailDebtorName"></h2>
+                <span class="close-button">&times;</span>
+            </div>
+            <div class="modal-body">
+                <div class="debtor-details-grid">
+                    <p><strong>Descrição:</strong> <span id="detailDebtorDescription"></span></p>
+                    <p><strong>Valor Emprestado:</strong> <span id="detailLoanedAmount"></span></p>
+                    <p><strong>Total a Receber:</strong> <span id="detailTotalToReceive"></span></p>
+                    <p><strong>% Juros:</strong> <span id="detailInterestPercentage"></span></p>
+                    <p><strong>Parcelas:</strong> <span id="detailInstallments"></span></p>
+                    <p><strong>Valor por Parcela:</strong> <span id="detailAmountPerInstallment"></span></p>
+                    <p><strong>Data Início:</strong> <span id="detailStartDate"></span></p>
+                    <div class="toggle-switch">
+                        <label for="toggleTotalToReceive">Esconder Total a Receber:</label>
+                        <label class="switch">
+                            <input type="checkbox" id="toggleTotalToReceive">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                </div>
+
+                <h3>Pagamentos</h3>
+                <div id="paymentsGrid" class="payments-grid">
+                    </div>
+
+                <div class="payment-actions">
+                    <div class="input-group">
+                        <label for="paymentAmount">Valor do Pagamento:</label>
+                        <input type="number" id="paymentAmount" step="0.01">
+                    </div>
+                    <div class="input-group">
+                        <label for="paymentDate">Data do Pagamento:</label>
+                        <input type="date" id="paymentDate">
+                    </div>
+                    <button id="fillAmountButton" class="button button-secondary">Preencher Valor</button>
+                    <button id="addPaymentButton" class="button">Adicionar Pagamento</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
